add reset and change grid button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   <title>Etch-a-Sketch</title>
 </head>
 <body>
-  <div class="main"></div>
+  <div class="main">
+    <div class="left">
+      <div id="title">Etch-a-Sketch!</div>
+      <button id="reset-button" type="reset">Reset Grid</button>
+      <button id="size-button">Change Size</button>
+    </div>
+    <div class="right">
+      <div class="grid"></div>
+    </div>
+  </div>
   <script src="./script.js"></script>
 </body>
 </html>
